# ccfolio

./: .gitignore  README.md  pyproject.toml
src/ccfolio/: __init__.py  __main__.py  autotitle.py  cli.py  config.py  database.py  markdown.py  mcp_server.py  models.py  parser.py  pricing.py  sync.py
tests/: test_core.py
